# blhx

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/notfour/blhx/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  screenshot.c  screenshot.h
app/src/main/java/com/notfour/blhx/: MainActivity.kt
app/src/main/java/com/notfour/blhx/jni/: ScreenShot.kt  ScreenShotUtils.kt
app/src/main/java/com/notfour/blhx/logic/: MainLooper.kt
app/src/main/java/com/notfour/blhx/service/: BlhxService.kt
app/src/main/java/com/notfour/blhx/utils/: CvUtils.kt  DisplayUtils.kt  ExeCommand.java  FloatWindowManager.kt  HuaweiUtils.java  InputUtils.kt  MeizuUtils.java  MiuiUtils.java  OppoUtils.java  QikuUtils.java  RomUtils.java
app/src/main/java/com/notfour/blhx/widget/: FloatBall.kt
app/src/main/libpng/: CMakeLists.txt
app/src/main/libpng/include/: pnglibconf.h
app/src/main/libpng/src/arm/: palette_neon_intrinsics.c
app/src/main/res/drawable/: floatball_bg.xml
app/src/main/res/layout/: activity_main.xml  float_window_layout.xml
app/src/main/res/values/: arrays.xml  dimens.xml  strings.xml
app/src/test/java/com/notfour/blhx/: ExampleUnitTest.kt
opencv-sdk/: .gitignore
opencv-sdk/java/src/org/opencv/core/: Core.java
